core-lang/src/main/java/edu/illinois/cs/cogcomp/l2ilp/grammar/CcmFolParser.java
// Generated from grammar/CcmFol.g4 by ANTLR 4.5.3
package edu.illinois.cs.cogcomp.l2ilp.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CcmFolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, TERM=15, RELATION=16, 
		CONSTRAINT=17, SOFT_CONSTRAINT=18, PREDICATE=19, MUTEX_PREDICATE=20, MIN=21, 
		MAX=22, SUBJECT_TO=23, IN=24, AND=25, OR=26, NOT=27, FORALL=28, EXIST=29, 
		ATLEAST=30, ATMOST=31, Identifier=32, STRING=33, INT=34, WS=35;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_eval_statement = 2, RULE_term_def = 3, 
		RULE_termSeq = 4, RULE_relation_dec = 5, RULE_relation_def = 6, RULE_predicate_def = 7, 
		RULE_constraint_dec = 8, RULE_constraint_def = 9, RULE_optimize_statement = 10, 
		RULE_poly_obj = 11, RULE_opt_op = 12, RULE_number = 13, RULE_indicatorVar = 14, 
		RULE_forall = 15, RULE_exist = 16, RULE_atLeast = 17, RULE_atMost = 18;
	public static final String[] ruleNames = {
		"program", "statement", "eval_statement", "term_def", "termSeq", "relation_dec", 
		"relation_def", "predicate_def", "constraint_dec", "constraint_def", "optimize_statement", 
		"poly_obj", "opt_op", "number", "indicatorVar", "forall", "exist", "atLeast", 
		"atMost"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'?'", "','", "'['", "'-'", "']'", "'='", "'{'", "'}'", "'->'", 
		"'+'", "'.'", "'('", "')'", "'term'", "'relation'", "'constraint'", "'soft_constraint'", 
		"'predicate'", "'mutex_predicate'", "'min'", "'max'", "'subjectTo'", "'in'", 
		"'and'", "'or'", "'not'", "'forall'", "'exist'", "'atLeast'", "'atMost'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "TERM", "RELATION", "CONSTRAINT", "SOFT_CONSTRAINT", 
		"PREDICATE", "MUTEX_PREDICATE", "MIN", "MAX", "SUBJECT_TO", "IN", "AND", 
		"OR", "NOT", "FORALL", "EXIST", "ATLEAST", "ATMOST", "Identifier", "STRING", 
		"INT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CcmFol.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CcmFolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				statement();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << TERM) | (1L << RELATION) | (1L << CONSTRAINT) | (1L << SOFT_CONSTRAINT) | (1L << PREDICATE) | (1L << MUTEX_PREDICATE) | (1L << MIN) | (1L << MAX) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Term_defContext term_def() {
			return getRuleContext(Term_defContext.class,0);
		}
		public Relation_decContext relation_dec() {
			return getRuleContext(Relation_decContext.class,0);
		}
		public Relation_defContext relation_def() {
			return getRuleContext(Relation_defContext.class,0);
		}
		public Predicate_defContext predicate_def() {
			return getRuleContext(Predicate_defContext.class,0);
		}
		public Constraint_decContext constraint_dec() {
			return getRuleContext(Constraint_decContext.class,0);
		}
		public Optimize_statementContext optimize_statement() {
			return getRuleContext(Optimize_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(62);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				match(T__0);
				}
				break;
			case TERM:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				term_def();
				setState(45);
				match(T__0);
				}
				break;
			case RELATION:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				relation_dec();
				setState(48);
				match(T__0);
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				relation_def();
				setState(51);
				match(T__0);
				}
				break;
			case PREDICATE:
			case MUTEX_PREDICATE:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				predicate_def();
				setState(54);
				match(T__0);
				}
				break;
			case CONSTRAINT:
			case SOFT_CONSTRAINT:
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				constraint_dec();
				setState(57);
				match(T__0);
				}
				break;
			case MIN:
			case MAX:
				enterOuterAlt(_localctx, 7);
				{
				setState(59);
				optimize_statement();
				setState(60);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eval_statementContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(CcmFolParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CcmFolParser.Identifier, i);
		}
		public Eval_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterEval_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitEval_statement(this);
		}
	}

	public final Eval_statementContext eval_statement() throws RecognitionException {
		Eval_statementContext _localctx = new Eval_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eval_statement);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(Identifier);
				setState(66);
				match(Identifier);
				setState(67);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_defContext extends ParserRuleContext {
		public TerminalNode TERM() { return getToken(CcmFolParser.TERM, 0); }
		public TermSeqContext termSeq() {
			return getRuleContext(TermSeqContext.class,0);
		}
		public Term_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterTerm_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitTerm_def(this);
		}
	}

	public final Term_defContext term_def() throws RecognitionException {
		Term_defContext _localctx = new Term_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_term_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(TERM);
			setState(71);
			termSeq();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermSeqContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(CcmFolParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CcmFolParser.Identifier, i);
		}
		public List<TerminalNode> INT() { return getTokens(CcmFolParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CcmFolParser.INT, i);
		}
		public TermSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termSeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterTermSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitTermSeq(this);
		}
	}

	public final TermSeqContext termSeq() throws RecognitionException {
		TermSeqContext _localctx = new TermSeqContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_termSeq);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(Identifier);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(74);
					match(T__2);
					setState(75);
					match(Identifier);
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(Identifier);
				setState(82);
				match(T__3);
				setState(83);
				match(INT);
				setState(84);
				match(T__4);
				setState(85);
				match(INT);
				setState(86);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relation_decContext extends ParserRuleContext {
		public TerminalNode RELATION() { return getToken(CcmFolParser.RELATION, 0); }
		public TerminalNode Identifier() { return getToken(CcmFolParser.Identifier, 0); }
		public Relation_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterRelation_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitRelation_dec(this);
		}
	}

	public final Relation_decContext relation_dec() throws RecognitionException {
		Relation_decContext _localctx = new Relation_decContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_relation_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(RELATION);
			setState(90);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relation_defContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(CcmFolParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CcmFolParser.Identifier, i);
		}
		public Relation_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterRelation_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitRelation_def(this);
		}
	}

	public final Relation_defContext relation_def() throws RecognitionException {
		Relation_defContext _localctx = new Relation_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_relation_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(Identifier);
			setState(93);
			match(Identifier);
			setState(94);
			match(T__6);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(95);
				match(Identifier);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Predicate_defContext extends ParserRuleContext {
		public TerminalNode PREDICATE() { return getToken(CcmFolParser.PREDICATE, 0); }
		public List<TerminalNode> Identifier() { return getTokens(CcmFolParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CcmFolParser.Identifier, i);
		}
		public TerminalNode MUTEX_PREDICATE() { return getToken(CcmFolParser.MUTEX_PREDICATE, 0); }
		public Predicate_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterPredicate_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitPredicate_def(this);
		}
	}

	public final Predicate_defContext predicate_def() throws RecognitionException {
		Predicate_defContext _localctx = new Predicate_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_predicate_def);
		int _la;
		try {
			setState(111);
			switch (_input.LA(1)) {
			case PREDICATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(PREDICATE);
				setState(102);
				match(Identifier);
				}
				break;
			case MUTEX_PREDICATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(MUTEX_PREDICATE);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(104);
					match(T__2);
					setState(105);
					match(Identifier);
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constraint_decContext extends ParserRuleContext {
		public TerminalNode CONSTRAINT() { return getToken(CcmFolParser.CONSTRAINT, 0); }
		public TerminalNode Identifier() { return getToken(CcmFolParser.Identifier, 0); }
		public Constraint_defContext constraint_def() {
			return getRuleContext(Constraint_defContext.class,0);
		}
		public TerminalNode SOFT_CONSTRAINT() { return getToken(CcmFolParser.SOFT_CONSTRAINT, 0); }
		public Constraint_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterConstraint_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitConstraint_dec(this);
		}
	}

	public final Constraint_decContext constraint_dec() throws RecognitionException {
		Constraint_decContext _localctx = new Constraint_decContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constraint_dec);
		try {
			setState(121);
			switch (_input.LA(1)) {
			case CONSTRAINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(CONSTRAINT);
				setState(114);
				match(Identifier);
				setState(115);
				match(T__6);
				setState(116);
				constraint_def(0);
				}
				break;
			case SOFT_CONSTRAINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(SOFT_CONSTRAINT);
				setState(118);
				match(Identifier);
				setState(119);
				match(T__6);
				setState(120);
				constraint_def(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constraint_defContext extends ParserRuleContext {
		public List<Constraint_defContext> constraint_def() {
			return getRuleContexts(Constraint_defContext.class);
		}
		public Constraint_defContext constraint_def(int i) {
			return getRuleContext(Constraint_defContext.class,i);
		}
		public IndicatorVarContext indicatorVar() {
			return getRuleContext(IndicatorVarContext.class,0);
		}
		public TerminalNode NOT() { return getToken(CcmFolParser.NOT, 0); }
		public AtMostContext atMost() {
			return getRuleContext(AtMostContext.class,0);
		}
		public AtLeastContext atLeast() {
			return getRuleContext(AtLeastContext.class,0);
		}
		public ExistContext exist() {
			return getRuleContext(ExistContext.class,0);
		}
		public ForallContext forall() {
			return getRuleContext(ForallContext.class,0);
		}
		public List<TerminalNode> OR() { return getTokens(CcmFolParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(CcmFolParser.OR, i);
		}
		public List<TerminalNode> AND() { return getTokens(CcmFolParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(CcmFolParser.AND, i);
		}
		public Constraint_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterConstraint_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitConstraint_def(this);
		}
	}

	public final Constraint_defContext constraint_def() throws RecognitionException {
		return constraint_def(0);
	}

	private Constraint_defContext constraint_def(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Constraint_defContext _localctx = new Constraint_defContext(_ctx, _parentState);
		Constraint_defContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_constraint_def, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(124);
				match(T__7);
				setState(125);
				constraint_def(0);
				setState(126);
				match(T__8);
				}
				break;
			case Identifier:
				{
				setState(128);
				indicatorVar();
				}
				break;
			case NOT:
				{
				setState(129);
				match(NOT);
				setState(130);
				constraint_def(5);
				}
				break;
			case ATMOST:
				{
				setState(131);
				atMost();
				setState(132);
				match(T__9);
				setState(133);
				constraint_def(4);
				}
				break;
			case ATLEAST:
				{
				setState(135);
				atLeast();
				setState(136);
				match(T__9);
				setState(137);
				constraint_def(3);
				}
				break;
			case EXIST:
				{
				setState(139);
				exist();
				setState(140);
				match(T__9);
				setState(141);
				constraint_def(2);
				}
				break;
			case FORALL:
				{
				setState(143);
				forall();
				setState(144);
				match(T__9);
				setState(145);
				constraint_def(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(165);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(163);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new Constraint_defContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_constraint_def);
						setState(149);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(152); 
						_errHandler.sync(this);
						_alt = 1;
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(150);
								match(OR);
								setState(151);
								constraint_def(0);
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(154); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
						} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
						}
						break;
					case 2:
						{
						_localctx = new Constraint_defContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_constraint_def);
						setState(156);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(159); 
						_errHandler.sync(this);
						_alt = 1;
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(157);
								match(AND);
								setState(158);
								constraint_def(0);
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(161); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
						} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
						}
						break;
					}
					} 
				}
				setState(167);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Optimize_statementContext extends ParserRuleContext {
		public Opt_opContext opt_op() {
			return getRuleContext(Opt_opContext.class,0);
		}
		public Poly_objContext poly_obj() {
			return getRuleContext(Poly_objContext.class,0);
		}
		public TerminalNode SUBJECT_TO() { return getToken(CcmFolParser.SUBJECT_TO, 0); }
		public List<TerminalNode> Identifier() { return getTokens(CcmFolParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(CcmFolParser.Identifier, i);
		}
		public Optimize_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optimize_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterOptimize_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitOptimize_statement(this);
		}
	}

	public final Optimize_statementContext optimize_statement() throws RecognitionException {
		Optimize_statementContext _localctx = new Optimize_statementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_optimize_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			opt_op();
			setState(169);
			poly_obj();
			setState(170);
			match(SUBJECT_TO);
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(171);
				match(Identifier);
				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Poly_objContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public IndicatorVarContext indicatorVar() {
			return getRuleContext(IndicatorVarContext.class,0);
		}
		public Poly_objContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_poly_obj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).enterPoly_obj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcmFolListener ) ((CcmFolListener)listener).exitPoly_obj(this);
		}
	}
